Core/xpipe-cmf/k8s/resources/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpipe-cmf
  name: xpipe-cmf
  namespace: xpipe-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xpipe-cmf
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpipe-cmf
    spec:
      imagePullSecrets:
      - name: sindria-dockerhub
      containers:
      - env:
        - name: XPIPE_EXAMPLE
          valueFrom:
            configMapKeyRef:
              key: XPIPE_EXAMPLE
              name: xpipe-cmf-config
        - name: XPIPE_CORE_AUTH_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_AUTH_CLIENT_ID
              name: xpipe-cmf-secret
        - name: XPIPE_CORE_AUTH_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_AUTH_CLIENT_SECRET
              name: xpipe-cmf-secret
        - name: XPIPE_CORE_CMF_DB_HOST
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_CMF_DB_HOST
              name: xpipe-cmf-secret
        - name: XPIPE_CORE_CMF_DB_DATABASE
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_CMF_DB_DATABASE
              name: xpipe-cmf-secret
        - name: XPIPE_CORE_CMF_DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_CMF_DB_USERNAME
              name: xpipe-cmf-secret
        - name: XPIPE_CORE_CMF_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: XPIPE_CORE_CMF_DB_PASSWORD
              name: xpipe-cmf-secret
        image: sindriaproject/xpipe-cmf:1.0.0
        imagePullPolicy: Always
        #securityContext:
        #  capabilities:
        #    add:
        #      - NET_ADMIN
        #livenessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 50
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        name: xpipe-cmf
        ports:
        - containerPort: 80
          protocol: TCP
        #readinessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 20
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        #volumeMounts:
        #- mountPath: /tmp/cmf
        #  name: xpipe-cmf-volume
      dnsPolicy: ClusterFirst
      #hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      #volumes:
      #- name: xpipe-cmf-volume
      #  persistentVolumeClaim:
      #    claimName: xpipe-cmf-pvc
      #    #defaultMode: 420
---
