Core/xpipe-cmf/k8s/resources/dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpipe-cmf
  name: xpipe-cmf
  namespace: xpipe-dev
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: xpipe-cmf
  sessionAffinity: None
  type: ClusterIP
